test/bad/lambdas/multiline01.px

f = lambda def
    return 0
    return ""

f()
